# tiny_http

./: .clang-format  CMakeLists.txt  LICENSE  README.md  amalgamate.py  requirements.txt  th.c  th.h
.github/workflows/: linux.yml  macos.yml  main.yml
benchmark/: benchmark.md  drogon_hello.cpp  drogon_static.cpp  run.sh  serve_static.c  setup_testfiles.sh  tiny_http_hello.c  tiny_http_static.c
examples/: custom_logger.c  echo.c  file_server.c  file_upload.c  hello_world.c
include/: th.h
src/: th_acceptor.c  th_acceptor.h  th_align.h  th_allocator.c  th_allocator.h  th_allocator_test.c  th_client.c  th_client.h  th_client_acceptor.c  th_client_acceptor.h  th_client_tracker.c  th_client_tracker.h  th_config.h  th_conn.c  th_conn.h  th_conn_tracker.c  th_conn_tracker.h  th_context.c  th_context.h  th_date.c  th_dir.c  th_dir.h  th_dir_mgr.c  th_dir_mgr.h  th_dir_mgr_test.c  th_error.c  th_exchange.c  th_exchange.h  th_fcache.c  th_fcache.h  th_fcache_test.c  th_file.c  th_file.h  th_fmt.c  th_fmt.h  th_hash.h  th_hashmap.h  th_hashmap_test.c  th_header_id.gperf  th_header_id.h  (+93 more)
